[tool.poetry]
name = "Python startup project template"
version = "0.1.0"
description = "A startup template project template for python projects."
authors = ["eykop"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-dotenv = "^0.5.2"
pytest-env = "^0.8.2"
#pytest-django = "^4.5.2" #optional for django projects
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pre-commit = "^2.16.0"
commitizen = "^2.20.0"

[tool.pytest.ini_options]
addopts = """\
    --disable-warnings
"""
env = ["SAMPLE_ENV_VAR=sample_env_value"]
testpaths = ["paths/to/tests/folders"]
env_override_existing_values = 1
env_files = ["./path/to/.env/file"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.cache
    | \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | __pycache__
    | _build
    | buck-out
    | build
    | dist
    | docs
    | migrations
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
